--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^2.38.0",
     "@types/node": "^20.8.0",
     "@vanilla-extract/css": "^1.13.0",
+    "clsx": "^2.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "react": "^18.2.0",
