--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@tabler/icons-react": "^2.38.0",
     "@types/node": "^20.8.0",
+    "@types/react-stickynode": "^4.0.1",
     "@vanilla-extract/css": "^1.13.0",
     "clsx": "^2.0.0",
     "prettier": "^3.0.3",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-stickynode": "^4.1.0",
     "sass": "^1.68.0"
   },
   "devDependencies": {
