--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.0",
+    "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.0",
     "@mantine/vanilla-extract": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.6",
@@ -21,6 +22,7 @@
     "@types/react-stickynode": "^4.0.1",
     "@vanilla-extract/css": "^1.13.0",
     "clsx": "^2.0.0",
+    "emoji-picker-react": "^4.5.2",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "react": "^18.2.0",
