--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^7.1.0",
     "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.0",
+    "@mantine/modals": "^7.1.3",
     "@mantine/vanilla-extract": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@tabler/icons-react": "^2.38.0",
