--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.0",
+    "@mantine/dropzone": "^7.1.5",
     "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.0",
     "@mantine/modals": "^7.1.3",
