--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "prisma": {
+    "schema": "src/database/schema.prisma"
+  },
   "scripts": {
     "build": "nest build",
     "format:check": "prettier --check .",
