--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,6 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "prisma": {
-    "schema": "src/database/schema.prisma"
-  },
   "scripts": {
     "build": "nest build",
     "format:check": "prettier --check .",
@@ -30,8 +27,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.4.2",
+    "@types/bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nestjs-prisma": "^0.22.0",
     "prisma": "^5.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
