--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,10 @@
+# Database
 DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=public"
+
+# Server
+PORT=3000
+
+# Secret
+JWT_SECRET_KEY="PINTEREST_SECRET_KEY"
+JWT_EXPIRES_IN="1d"
+
