--- a/server/.env.dev
+++ b/server/.env.dev
@@ -4,7 +4,9 @@ DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=p
 # Server
 PORT=3000
 
-# Secret
+# JWT
 JWT_SECRET_KEY="PINTEREST_SECRET_KEY"
 JWT_EXPIRES_IN="1d"
+
+
 
