--- a/server/.env.dev
+++ b/server/.env.dev
@@ -5,7 +5,7 @@ DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=p
 PORT=3000
 
 # JWT
-JWT_SECRET_KEY="PINTEREST_SECRET_KEY"
+JWT_SECRET="PINTEREST_SECRET"
 JWT_EXPIRES_IN="1d"
 
 
