--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,5 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true
   }
 }
