--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,8 @@
     "passport-local": "^1.0.0",
     "prisma": "^5.4.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "win-node-env": "^0.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
