--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -16,6 +16,5 @@
   "requirePragma": false,
   "tabWidth": 2,
   "useTabs": false,
-  "embeddedLanguageFormatting": "auto",
-  "plugins": ["prettier-plugin-organize-imports"]
+  "embeddedLanguageFormatting": "auto"
 }
