--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
     // "noUnusedLocals": true,
-    // "noUnusedParameters": true
+    // "noUnusedParameters": true,
   }
 }
