--- a/server/.env.dev
+++ b/server/.env.dev
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=public"
+export DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=public"
 
 # Server
 PORT=3000
