--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "packageManager": "yarn",
   "scripts": {
     "build": "nest build",
     "format:check": "prettier --check .",
