update update controller comment

--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -17,7 +17,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "embeddedLanguageFormatting": "auto",
-  "importOrder": ["^@nestjs/(.*)$", "^[src/]", "^[./]"],
+  "importOrder": ["^@nestjs/(.*)$", "<THIRD_PARTY_MODULES>", "^[src/]", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderParserPlugins": ["typescript", "classProperties", "decorators-legacy"],
