--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "emoji-picker-react": "^4.5.2",
+    "jwt-decode": "^4.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "react": "^18.2.0",
