--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@mantine/vanilla-extract": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@tabler/icons-react": "^2.38.0",
+    "@types/chroma-js": "^2.4.3",
     "@types/node": "^20.8.0",
     "@types/react-stickynode": "^4.0.1",
     "@vanilla-extract/css": "^1.13.0",
     "axios": "^1.5.1",
+    "chroma-js": "^2.4.2",
     "clsx": "^2.0.0",
     "emoji-picker-react": "^4.5.2",
     "jwt-decode": "^4.0.0",
