--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -16,5 +16,8 @@
   "requirePragma": false,
   "tabWidth": 2,
   "useTabs": false,
-  "embeddedLanguageFormatting": "auto"
+  "embeddedLanguageFormatting": "auto",
+  "importOrder": ["^react(.*)", "@mantine/(.*)", "<THIRD_PARTY_MODULES>", "@/(.*)", "^[./]"],
+  "importOrderSeparation": true,
+  "plugins": ["prettier-plugin-organize-imports", "@trivago/prettier-plugin-sort-imports"]
 }
