--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.0",
     "@mantine/modals": "^7.1.3",
+    "@mantine/notifications": "^7.2.2",
     "@mantine/vanilla-extract": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@tabler/icons-react": "^2.38.0",
@@ -30,7 +31,7 @@
     "emoji-picker-react": "^4.5.2",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -39,6 +40,7 @@
     "sass": "^1.68.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
