--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@types/react-stickynode": "^4.0.1",
     "@vanilla-extract/css": "^1.13.0",
     "axios": "^1.5.1",
+    "browser-image-compression": "^2.0.2",
     "chroma-js": "^2.4.2",
     "clsx": "^2.0.0",
     "emoji-picker-react": "^4.5.2",
