--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "format:check": "prettier --check .",
     "format:fix": "prettier --write .",
     "start": "nest start",
-    "start:dev": "NODE_ENV=dev nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "dotenv -e .env.dev yarn prisma migrate dev"
+    "migrate:dev": "dotenv -e .env.development yarn prisma migrate dev"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
