--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "chroma-js": "^2.4.2",
     "clsx": "^2.0.0",
     "copy-to-clipboard": "^3.3.3",
+    "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.5.2",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.0.3",
