--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@mantine/core": "^7.1.0",
     "@mantine/dropzone": "^7.1.5",
     "@mantine/form": "^7.1.3",
