--- a/server/.env.development
+++ b/server/.env.development
@@ -11,3 +11,7 @@ JWT_EXPIRES_IN="1d"
 # Server URL
 SERVER_URL="http://localhost:3000"
 
+# Cloudinary
+CLOUDINARY_CLOUD_NAME="dxildnjhd"
+CLOUDINARY_API_KEY="123649336474994"
+CLOUDINARY_API_SECRET="xPagkQHH_deABU1ldMlg9RznMiM"
