--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.0.1",
     "multer": "^1.4.5-lts.1",
     "nestjs-prisma": "^0.22.0",
     "passport": "^0.6.0",
@@ -44,6 +45,7 @@
     "prisma": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "win-node-env": "^0.6.1"
   },
   "devDependencies": {
@@ -56,6 +58,7 @@
     "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.11",
+    "@types/streamifier": "^0.1.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
