--- a/server/.env.development
+++ b/server/.env.development
@@ -1,5 +1,5 @@
 # Database
-export DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/db_pinterest?schema=public"
+export DATABASE_URL="mysql://root:Binhyeutram0310@@localhost:3306/pinterest?schema=public"
 
 # Server
 PORT=3000
